# ai-juniper-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml
config/: accounts.example.json  ai-providers.example.json  devices.example.json  juniper-access.example.json
deploy/: juniper-ai-assistant.env.example  juniper-ai-assistant.service
docs/: operations.md
prompts/: system-readonly.md
scripts/: install-service.sh
src/juniper_ai_assistant/: __init__.py  access_config.py  accounts.py  ai_config.py  cli.py  collector.py  service.py
tests/: test_policy.py
