[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-juniper-assistant"
version = "0.1.0"
description = "Read-only AI assistant patterns for Juniper QFX troubleshooting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hieu Cong" }
]

[project.scripts]
juniper-ai-assistant = "juniper_ai_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
